apps/nginx-kust-passthrough/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels:
    gslb: enabled
  annotations:
    passthrough.ako.vmware.com/enabled: "true"
spec:
  ingressClassName: avi-lb
  rules:
  - host: nginx.my.domain
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx.my.domain
    secretName: the-tls-secret
